--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,6 +1,8 @@
 <h1>タスク <%= @task.content %> の詳細</h1>
 
+<
 <p><%= @task.content %></p>
+<p><%= @task.status %></p>
 
 <p><%=link_to '一覧に戻る', tasks_path %></p>
 <p><%=link_to 'このタスクを編集する', edit_task_path %> </p>
