--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,9 +1,14 @@
 <h1>あなたのタスク一覧</h1>
-
-<ul>
-  <% @tasks.each do |task| %>
-    <li><%= link_to task.content, task %></li>
-  <% end %>
-</ul>
+<% if @tasks.any? %>
+  <ul>
+    <% @tasks.each do |task| %>
+      <li><%= link_to task.content, task %></li>
+    <% end %>
+  </ul>
+<% end %>
 
 <%=link_to '新規タスクの追加', new_task_path %>
+<%=link_to 'ログアウト', logout_path , method: :delete%>
+  
+
+  
