ログインページの挙動修正

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -25,6 +25,6 @@
       <%= f.submit '登録' %>
     <% end %>
     
-    <p><%= link_to '戻る', signup_path  %></p>
+    <p><%= link_to '戻る', login_path  %></p>
   </div>
 </div>
