--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,6 +2,7 @@
 <div>
   <div>
     <%= form_with(model: @user) do |f| %>
+    <%= render 'layouts/error_messages', model: f.object %>
       <div>
         <%= f.label :name, '名前' %>
         <%= f.text_field :name %>
